--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"@modelcontextprotocol/sdk": "*",
 		"gunshi": "*",
 		"package-directory": "*",
+		"pino": "^10.1.0",
+		"pino-pretty": "^13.1.3",
 		"zod": "*"
 	},
 	"devDependencies": {
