--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
 		"gunshi": "*",
 		"package-directory": "*",
 		"pino": "^10.1.0",
-		"pino-pretty": "^13.1.3",
-		"zod": "*"
+		"pino-pretty": "^13.1.3"
 	},
 	"devDependencies": {
 		"@types/node": "^25.0.3",
@@ -49,6 +48,7 @@
 		"oxfmt": "*",
 		"oxlint": "*",
 		"tsdown": "0.19.0-beta.2",
-		"vitest": "*"
+		"vitest": "*",
+		"zod": "*"
 	}
 }
