Migrate from @modelcontextprotocol/sdk to @modelcontextprotocol/server
- Update imports to use new @modelcontextprotocol/server package
- Export Tool type from SDK alongside custom ToolDefinition
- Simplify tool registration: SDK now accepts Zod schemas directly
- Remove manual zodToJsonSchema conversion (SDK handles it internally)
- Clean up package.json dependencies (remove unused SDK packages)
- Fix test formatting issues

All quality gates passing: typecheck, lint, format, and tests

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"build": "concurrently \"npm:typecheck\" \"npm:lint\" \"npm:format:check\" \"npm:test\""
 	},
 	"dependencies": {
-		"@modelcontextprotocol/sdk": "*",
+		"@modelcontextprotocol/server": "link:../../archive/mcp-ts-sdk/packages/server",
 		"gunshi": "*",
 		"package-directory": "*",
 		"pino": "^10.1.0",
