--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"gunshi": "*",
 		"package-directory": "*",
 		"pino": "^10.1.0",
-		"pino-pretty": "^13.1.3"
+		"pino-pretty": "^13.1.3",
+		"tinyglobby": "^0.2.15"
 	},
 	"devDependencies": {
 		"@types/node": "^25.0.3",
